# mathsolver

./: .gitignore  README.md  WORKPLAN.md  install.sh  main.py  mathsolver.desktop  mathsolver.spec  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: physics_formulas.json  settings.yaml
src/: __init__.py  models.py
src/classification/: __init__.py  classifier.py  physics_patterns.py
src/gui/: __init__.py  history_dialog.py  main_window.py
src/input/: __init__.py  ocr.py  parser.py  screenshot.py
src/output/: __init__.py  exporter.py  mathjax_widget.py  renderer.py  step_generator.py
src/solvers/: __init__.py  base.py  calculus_solver.py  general.py  ode_solver.py  physics_solver.py
src/utils/: __init__.py  constants.py  database.py  errors.py  units.py
tests/: __init__.py  test_calculus.py  test_core.py  test_errors.py  test_export.py  test_physics.py
